--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "express": "^4.17.1",
     "passport": "^0.4.1",
     "passport-twitter": "^1.0.4"
+  },
+  "engines": {
+    "node": "10.15.3"
   }
 }
